# qJobManager

./: CMakeLists.txt  README.md  main.cpp  qJob.cpp  qJob.h  qJobManager.cpp  qJobManager.h
